# ass2

./: .gitignore  README.md  pyproject.toml
haha/__MACOSX/assignment_2/egg_data_assignment_2/sub-24/: ._oc_0.csv
haha/assignment_2/: assignment_2.ipynb  eeg_plot.html
