[project]
name = "ass2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mne>=1.10.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
]
